--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
             </form>
         </div>
 
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
