--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     <header class="header-page header">
         <div class="container">
             <div class="row align-items-center pt-4">
-                <div class="page__start col-md-2 col-lg-3 d-flex justify-content-start">
+                <div class="page__start col-12 col-sm-3 col-md-2 col-lg-3 d-flex justify-content-sm-start justify-content-center">
                     <div class="page__start-logo">
                         <img class="page__start-logo-img" src="assets/img/svg/logo.svg" alt="logo">
                     </div>
                 </div>
-                <div class="page__center col-md-8 col-lg-6 d-flex justify-content-center">
-                    <nav class="navbar navbar-expand-lg navbar-white bg-transparent">
+                <div class="page__center col-12 col-sm-5 col-md-6 col-lg-6 d-flex justify-content-center">
+                    <nav class="navbar navbar-expand-lg bg-transparent">
                         <div class="container-fluid">
+                            <a class="navbar-brand" href="#"></a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
@@ -43,7 +47,7 @@
                         </div>
                     </nav>
                 </div>
-                <div class="page__end col-md-2 col-lg-3 d-flex justify-content-end">
+                <div class="page__end col-12 col-sm-4 col-md-4 col-lg-3 d-flex justify-content-sm-end justify-content-center">
                     <object class="page__end-img" data="assets/img/svg/phone.svg" type="image/svg+xml">
                         <p>Если не работает SVG</p>
                     </object>
@@ -58,23 +62,23 @@
     <section class="page-home promo">
         <div class="container">
             <div class="row">
-                <div class="info col-lg-8">
-                    <h1 class="m-0 text-start">Создаем и продвигаем сайты по всей России</h1>
-                    <p class="subtitle text-start">Сайты для бизнеса и личного пользования</p>
-                    <div class="items d-flex flex-wrap justify-content-start align-items-center">
-                        <div class="item me-3 mb-sm-3 mb-xl-0 mb-2">
+                <div class="info col-md-7 col-lg-8">
+                    <h1 class="m-0 text-md-start text-sm-center text-center">Создаем и продвигаем сайты по всей России</h1>
+                    <p class="subtitle text-md-start text-center">Сайты для бизнеса и личного пользования</p>
+                    <div class="items d-sm-flex flex-wrap justify-content-sm-around justify-content-md-start align-items-center">
+                        <div class="item me-0 me-sm-3 mb-xl-0 mb-3 mb-sm-0 mb-md-3 mb-lg-0">
                     	    <p class="mb-0">
                     		    <a class="btn px-4 py-2" href="">Узнать стоимость</a>
                     	    </p>
                         </div>
                     	<div class="item">
                     		<p class="mb-0">
-                    			<a class="btn link px-4 py-2" data-where="" href="javascript:;">Заказать редизайн</a>
+                    			<a class="btn transparent px-4 py-2" data-where="" href="javascript:;">Заказать редизайн</a>
                     		</p>
                     	</div>
                     </div>
-
-                    <ul class="list d-flex flex-wrap justify-content-around">
+                <div class="">
+                    <ul class="list d-sm-flex flex-wrap justify-content-sm-around justify-content-md-between">
                         <li class="item">
                             <a href="#">Создание сайта</a>
                         </li>
@@ -85,18 +89,7 @@
                             <a href="#">Продвижение сайта</a>
                         </li>
                     </ul>
-
-                    <!-- <div class="items d-flex flex-wrap justify-content-between mt-5">
-                        <div class="item">
-                            <p><a href="#">Создание сайта</a></p>
-                        </div>
-                        <div class="item">
-                            <p><a href="#">Поддержка сайта</a></p>
-                        </div>
-                        <div class="item">
-                            <p><a href="#">Продвижение сайта</a></p>
-                        </div>
-                    </div> -->
+                </div>
                 </div>
             </div>
             <div class="line"></div>
@@ -106,18 +99,18 @@
     <section class="page-home team">
         <div class="container">
             <div class="row">
-                <div class="info col-md-6">
-                    <h2 class="title text-start text-uppercase">Команда Juventud</h2>
-                    <p class="text text-start">Наша команда juventud занимается созданием и поддержкой сайтов Вашей мечты. Чтобы рассказать о своем бизнесе, завоевать доверие клиентов или продавать товар или услугу, необходима страница в сети Интернет. Независимо от того, находится компания на стартовом пути или уже успела стать узнаваемой на рынке, собственный сайт поможет увеличить продажи, а также организовать оперативную поддержку для клиентов.
+                <div class="info col-md-12 col-lg-6">
+                    <h2 class="title text-center text-sm-start text-uppercase">Команда Juventud</h2>
+                    <p class="text text-center text-sm-start">Наша команда juventud занимается созданием и поддержкой сайтов Вашей мечты. Чтобы рассказать о своем бизнесе, завоевать доверие клиентов или продавать товар или услугу, необходима страница в сети Интернет. Независимо от того, находится компания на стартовом пути или уже успела стать узнаваемой на рынке, собственный сайт поможет увеличить продажи, а также организовать оперативную поддержку для клиентов.
                     </p>
-                    <div class="prof d-flex justify-content-between flex-wrap">
+                    <div class="prof d-block text-center d-sm-flex justify-content-sm-between flex-wrap">
                         <a class="link link-decor" href="#">Маркетолог</a>
                         <a class="link link-decor" href="#">Дизайнер</a>
                         <a class="link link-decor" href="#">SEO</a>
                         <a class="link link-decor" href="#">Программист</a>
                     </div>
                 </div>
-                <div class="photos col-md-6">
+                <div class="photos col-md-12 col-lg-6">
                     <div class="photos-person">
                         <img src="assets/img/team.jpg" alt="person">
                         <p class="label">Иван Иванов</p>
@@ -133,96 +126,96 @@
         <div class="container">
             <div class="info">
                 <div class="row">
-                    <h2 class="portfolio__title title col-6 text-start text-uppercase">Наши работы</h2>
-                    <p class="portfolio__text text col-6 text-start mb-5">Мы любим проекты, которые не перестают развиваться и требуют постоянного внимания как с нашей стороны, так и со стороны клиента. Мы готовы взяться за любое техническое задание, будь то высоконагруженный интернет-магазин, CRM-система или уникальный веб-сервис.</p>
+                    <h2 class="info__title title col-12 col-lg-6 text-center text-sm-start text-uppercase">Наши работы</h2>
+                    <p class="info__text text col-12 col-lg-6 text-center text-sm-start mb-5">Мы любим проекты, которые не перестают развиваться и требуют постоянного внимания как с нашей стороны, так и со стороны клиента. Мы готовы взяться за любое техническое задание, будь то высоконагруженный интернет-магазин, CRM-система или уникальный веб-сервис.</p>
                 </div>
             </div>
-            <div class="portfolio__slider">
-                <ul class="portfolio__slider-list">
+            <div class="slider">
+                <ul class="list">
                     <div class="row">
-                        <li class="portfolio__slider-item col-4">
-                            <h3 class="portfolio__slider-title text-start">Аредна автобуса на праздник</h3>
-                            <p class="portfolio__slider-text text-start">2021</p>
-                            <img class="portfolio__slider-img" src="assets/img/work-1.jpg" alt="landing-page">
+                        <li class="item col-4 d-flex flex-column justify-content-between">
+                            <h3 class="item-title text-start">Аредна автобуса на праздник</h3>
+                            <p class="item-text text-start">2021</p>
+                            <img class="item-img" src="assets/img/work-1.jpg" alt="landing-page">
                         </li>
-                        <li class="portfolio__slider-item col-4">
-                            <h3 class="portfolio__slider-title text-start">Отель в горах Архыз</h3>
-                            <p class="portfolio__slider-text text-start">2021</p>
-                            <img class="portfolio__slider-img" src="assets/img/work-2.jpg" alt="landing-page">
+                        <li class="item col-4 d-flex flex-column justify-content-between">
+                            <h3 class="item-title text-start">Отель в горах Архыз</h3>
+                            <p class="item-text text-start">2021</p>
+                            <img class="item-img" src="assets/img/work-2.jpg" alt="landing-page">
                         </li>
-                        <li class="portfolio__slider-item col-4">
-                            <h3 class="portfolio__slider-title text-start">Выпечка на любой случай</h3>
-                            <p class="portfolio__slider-text text-start">2021</p>
-                            <img class="portfolio__slider-img" src="assets/img/work-3.jpg" alt="landing-page">
+                        <li class="item col-4 d-flex flex-column justify-content-between">
+                            <h3 class="item-title text-start">Выпечка на любой случай</h3>
+                            <p class="item-text text-start">2021</p>
+                            <img class="item-img" src="assets/img/work-3.jpg" alt="landing-page">
                         </li>
                     </div>
                 </ul>
-                <div class="photos-array"></div>
+                <div class="array"></div>
             </div>
             <div class="line"></div>
         </div>
     </section>
 
     <section class="page-home mackets">
-        <div class="container mackets__container">
+        <div class="container">
             <div class="row">
-                <h2 class="mackets__title title col-6 text-start text-uppercase">Макеты</h2>
-                <p class="mackets__text text col-6 text-start mb-5">Сайт в сети интернет дает возможность создать витрину продаваемых товаров на экране, рассказать потенциальным клиентам о компании, о новинках в выбранной сфере, а также при необходимости быстро связаться для решения возникающих вопросов.</p>
+                <h2 class="mackets__title title col-12 col-lg-6 text-center text-sm-start text-uppercase">Макеты</h2>
+                <p class="mackets__text text col-12 col-lg-6 text-center text-sm-start mb-5">Сайт в сети интернет дает возможность создать витрину продаваемых товаров на экране, рассказать потенциальным клиентам о компании, о новинках в выбранной сфере, а также при необходимости быстро связаться для решения возникающих вопросов.</p>
             </div>
-            <div class="mackets-wrapper">
-                <div class="mackets__category col-9 d-flex justify-content-between mb-5">
-                    <a class="mackets__category-link link-decor" href="#">Landing Page</a>
-                    <a class="mackets__category-link link-decor" href="#">Сайт-Визитка</a>
-                    <a class="mackets__category-link link-decor" href="#">Сайт для компании</a>
-                    <a class="mackets__category-link link-decor" href="#">Интернет-Магазин</a>
-                    <a class="mackets__category-link link-decor" href="#">Онлайн-Каталог</a>
+            <div class="wrapper">
+                <div class="category col-9 offset-1 d-flex justify-content-between mb-5">
+                    <a class="link link-decor" href="#">Landing Page</a>
+                    <a class="link link-decor" href="#">Сайт-Визитка</a>
+                    <a class="link link-decor" href="#">Сайт для компании</a>
+                    <a class="link link-decor" href="#">Интернет-Магазин</a>
+                    <a class="link link-decor" href="#">Онлайн-Каталог</a>
                 </div>
-                <div class="macket__promo-wrap">
+                <div class="promo-wrap">
                     <div class="row">
-                        <div class="mackets__about col-6">
-                            <p class="mackets__text">Лэндинг нужен для того, чтобы быстро развернуть предложение конкретной услуги.</p>
-                            <h2 class="mackets__subtitle">Landing Page это:</h2>
-                            <div class="mackets__this">
-                                <h2 class="mackets__this-title">Дизайн</h2>
+                        <div class="about col-6 offset-1">
+                            <p class="about__text">Лэндинг нужен для того, чтобы быстро развернуть предложение конкретной услуги.</p>
+                            <h2 class="about__subtitle text-start">Landing Page это:</h2>
+                            <div class="this">
+                                <h2 class="this-title text-start pb-0">Дизайн</h2>
                                 <div class="line-two"></div>
-                                <ul class="mackets__this-list">
-                                    <li class="mackets__this-item">8 блоков</li>
-                                    <li class="mackets__this-item">Форма заявки</li>
-                                    <li class="mackets__this-item">Форма обратного звонка</li>
+                                <ul class="list offset-4 d-flex flex-column align-items-start">
+                                    <li class="item">8 блоков</li>
+                                    <li class="item">Форма заявки</li>
+                                    <li class="item">Форма обратного звонка</li>
                                 </ul>
                             </div>
-                            <div class="mackets__this">
-                                <h2 class="mackets__this-title">Наполнение</h2>
+                            <div class="this">
+                                <h2 class="this-title text-start pb-0">Наполнение</h2>
                                 <div class="line-two"></div>
-                                <ul class="mackets__this-list">
-                                    <li class="mackets__this-item">Фотографии со стоков </li>
-                                    <li class="mackets__this-item">Текст на сайт</li>
+                                <ul class="list offset-4 d-flex flex-column align-items-start">
+                                    <li class="item">Фотографии со стоков </li>
+                                    <li class="item">Текст на сайт</li>
                                 </ul>
                             </div>
-                            <div class="mackets__this">
-                                <h2 class="mackets__this-title">Верстка</h2>
+                            <div class="this">
+                                <h2 class="this-title text-start pb-0">Верстка</h2>
                                 <div class="line-two"></div>
-                                <ul class="mackets__this-list">
-                                    <li class="mackets__this-item">Перенос макета на выбранную CMS</li>
-                                    <li class="mackets__this-item">Настройка корректной работы</li>
-                                    <li class="mackets__this-item">Запуск сайта</li>
+                                <ul class="list offset-4 d-flex flex-column align-items-start">
+                                    <li class="item">Перенос макета на выбранную CMS</li>
+                                    <li class="item">Настройка корректной работы</li>
+                                    <li class="item">Запуск сайта</li>
                                 </ul>
                             </div>
-                            <div class="mackets__this">
-                                <h2 class="mackets__this-title">Поддержка</h2>
+                            <div class="this">
+                                <h2 class="this-title text-start pb-0">Поддержка</h2>
                                 <div class="line-two"></div>
-                                <ul class="mackets__this-list">
-                                    <li class="mackets__this-item">SEO 1 месяц</li>
-                                    <li class="mackets__this-item">Поддержка сайта 1 месяц</li>
-                                    <li class="mackets__this-item">Базовое обучение CMS</li>
+                                <ul class="list offset-4 d-flex flex-column align-items-start">
+                                    <li class="item">SEO 1 месяц</li>
+                                    <li class="item">Поддержка сайта 1 месяц</li>
+                                    <li class="item">Базовое обучение CMS</li>
                                 </ul>
+                            </div>
+                            <div class="link offset-11">
+                                <a class="btn" href="#">Выбрать макет</a>
                             </div>
                         </div>
-                        <div class="mackets__promo col-6">
-                            <img class="mackets__promo-img" src="assets/img/landing.jpg" alt="promo">
-                            <div class="mackets__promo-link">
-                                <a class="mackets__btn" href="#">Выбрать макет</a>
-                            </div>
+                        <div class="promo col-5">
+                            <img class="img" src="assets/img/landing.jpg" alt="promo">
                         </div>
                     </div>
                 </div>
